Fixed personal library not taking upp full width on mobile

--- a/src/components/ui/AddCard.css
+++ b/src/components/ui/AddCard.css
@@ -197,6 +197,12 @@
     .book-entry{
         button{
             display: flex;
+            max-width: 1.5em;
+            max-height: 1.5em;
+
+            img {
+                width: 1.25em !important;
+            }
         }
 
         .button-group {
