--- a/src/components/ui/Card.css
+++ b/src/components/ui/Card.css
@@ -98,6 +98,15 @@
         .card:nth-of-type(2){
             width: 100%;
         }
+
+        .card:nth-of-type(1){
+            min-width: 100%;
+        }
+    
+        .card:nth-of-type(2){
+            min-width: 100%;
+            max-width: 100%;
+        }
     }
     
     .small {
